--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Abel';
     font-size: 22px;
@@ -25,8 +30,7 @@ header {
     height: 200px;
 }
 
-.navBarItem
-{
+.navBarItem {
     width: 20px;
     height: 20px;
 }
@@ -35,7 +39,8 @@ h1 {
     color: white;
 }
 
-.banner{
+/*BANNER***********************************************************************************/
+.banner {
     width: 100%;
     max-width: 100%;
     height: 100px;
@@ -44,4 +49,56 @@ h1 {
 .divbanner {
     width: 100%;
     max-width: 100%
+}
+
+/*SECTION************************************************************************************************************************/
+
+#gallery-h2 {
+    text-align: center;
+    margin-top: 3%;
+}
+
+.products {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2%;
+}
+
+.picture{
+    margin-left: 70px;
+    
+}
+
+.product-photos {
+    width: 75%;
+    height: 75%;
+    border-radius: 10%;
+    border: 3px solid #ADD8E6;
+}
+
+.name-product {
+    display: flex;
+    justify-content: space-between; 
+    margin-right: 60px;
+}
+
+/*NEWSLETTER************************************************************************************************************************/
+.row {
+    background-color: lightblue;
+    height: 50px;
+    width: 300px;
+    margin-top: 80px;
+    margin-left: 600px;
+
+}
+
+#submit_button {
+    margin-top: 30px;
+    margin-left: 600px;
+}
+
+/*FOOTER********************************************************************************************************/
+footer {
+    text-align: center;
+    margin-top: 90px;
 }
