--- a/style3.css
+++ b/style3.css
@@ -1,8 +1,4 @@
-
-@media (max-width:800px)
-
-
-body {
+@media (max-width:800px) body {
 
     background-color: #edf1f5;
     margin-top: 20px;
@@ -61,7 +57,7 @@ h2 {
     text-align: center;
     font-size: 2em;
     position: relative;
-  
+
 }
 
 
@@ -76,7 +72,7 @@ h2 {
     border: 1px solid #ADD8E6;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 100px;
-    
+
 }
 
 
@@ -113,13 +109,12 @@ h2 {
 
 .col-lg-7 {
     position: absolute;
-    float: right;
     margin-left: 400px;
     margin-bottom: 200ew;
     box-sizing: border-box;
     width: 200px;
     height: 100px;
-    left: 10px;
+    left: 200px;
     top: 100px;
     background: rgba(177, 215, 227, 0.76);
     border-radius: 40px;
@@ -128,18 +123,32 @@ h2 {
 }
 
 
-.detail{
+.detail {
 
 
-background-color: aqua;
-width: 50%;
-height: 100%;
+    background-color: aqua;
+    width: 50%;
+    height: 100%;
 
 
 
 
 }
 
+.boxstitch {
+    width: 60%;
+}
+
+.boxstitch img {
+    width: 40%;
+}
+
+.p-3{
+
+width: 200px;
+height: 400px;
+
+}
 
 
 .grid {
@@ -149,9 +158,9 @@ height: 100%;
     align-items: stretch;
     column-gap: 10px;
     row-gap: 10px;
-  }
-  
-  .content {
+}
+
+.content {
     color: #242424;
     background-color: white;
     font-weight: 200;
@@ -159,36 +168,50 @@ height: 100%;
     box-sizing: border-box;
     height: 60%;
     padding: 10px;
-  }
+}
 
 
-img#galery1{
+img#galery1 {
 
-width: 300px;
-height: 300px;
+    width: 170px;
+    height: 200px;
+
 
 
 }
 
 
-img#galery2{
+img#galery2 {
 
-    width: 300px;
-    height: 300px;
+    width: 170px;
+    height: 200px;
+    border-radius: 30px;
 
 }
 
 
-img#galery3{
+img#galery3 {
 
-    width: 300px;
-height: 300px;
+    width: 170px;
+    height: 200px;
+    border-radius: 30px;
 }
 
 
-img#galery4{
+img#galery4 {
 
-    
-    width: 300px;
-    height: 300px;
+
+    width: 170px;
+    height: 200px;
+    border-radius: 30px;
+
+}
+
+div.p-3{
+
+background-color: lightblue;
+border-radius: 30px;
+
+
+
 }
