--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ h2 {
 .row {
 
     background-color:lightblue;
-    height: 450px;
-    width: 50px;
+    height: 10%;
+    width: 30%;
     margin-top: 80px;
     margin-left: 600px;
 
